# tf-pre-commit

./: .codespellrc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements_dev.txt
.github/ISSUE_TEMPLATE/: aks_a_question.yml  bug_report.yml  feature_request.yml
.github/workflows/: build-python-package.yaml
src/tf_pre_commit/: __about__.py  __init__.py  fmt.py
